# VolumeRendering

./: .gitignore  CMakeLists.txt  README.md  report.md  vcpkg.json
assets/Scalar/: neghip.inf
assets/shaders/: volume.frag  volume.vert
include/: Application.h  Camera.h  Isosurface.h  MarchingCubeTable.h  Model.h  Object.h  Shader.h  Slicing.h  Texture2D.h  TransferFunc.h  Util.h  VolumeData.h  Window.h
src/: Application.cpp  Camera.cpp  Isosurface.cpp  Model.cpp  Object.cpp  Shader.cpp  Slicing.cpp  Texture2D.cpp  TransferFunc.cpp  Util.cpp  VolumeData.cpp  Window.cpp
